# CalHacks

./: .env.example  .gitignore  Aegis_Route_Pitch.pptx  COMPLETE.md  DEMO.md  INTEGRATION.md  README.md  SLIDES.md  contract_builder.py  demo.py  extractor_agent.py  graph_seed.py  graph_traversal.py  index.html  ingest.py  package-lock.json  package.json  pyproject.toml  redis_store.py  requirements.txt  semantic_cache.py  sim_realtime.py  solver_bridge.py  stress.py  voice_demo.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.tsx  enhancements.css  styles.css  types.ts
samples/: sample_optimize_request.json
scripts/: precompute_palisades_hazards.py  prepare_palisades_demo.py  replay_palisades_to_redis.py  run_backend.ps1  run_backend.sh  run_frontend.ps1  run_frontend.sh  seed_redis.py  simulate_dynamic_routes.py  train_model.py
solver/: __init__.py  config.py  redis_client.py
solver/adapters/: aegis_contract.py
solver/algorithms/: __init__.py  cvrp.py  ml_warmstart.py  nearest_neighbor.py  path_utils.py  (+2 more)
solvers/: your_solver_adapter.py
src/: App.tsx  styles.css
tests/: conftest.py  test_algorithms.py  test_api.py  test_contract.py  test_integration.py  test_optimize_endpoint.py  test_pubsub.py  test_realtime.py  test_semantic_cache.py  test_solver.py  test_solver_bridge.py  test_store.py  test_traversal.py  test_visit_penalties.py  test_voice.py  test_voice_intake.py
viz/: index.html
voice/: __init__.py  deepgram_stt.py  deepgram_tts.py  dispatch_pipeline.py  grid.py  make_sample_audio.py  voice_agent.py
(+31 files in other folders)
