[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoe-solver"
version = "0.1.0"
description = "Agentic Optimization Engine — real-time CVRP/TSP solver"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "redis>=5.0",
    "numpy>=1.26",
    "ortools>=9.9",
    "elkai>=2.0",
    "torch>=2.2",
    "websockets>=12.0",
    "httpx>=0.27",
    "shapely>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.21",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["solver*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
